almost done with metadata/added pics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <ul>
+        <li>
+            <a href="./questions?id=Race">Create User</a>
+        </li>
+    </ul>
+
     <script type="module" src="app.js"></script>
 </body>
 
